--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "Target",
     "slug": "Target",
+    "schema": "Target",
     "version": "1.0.0",
     "android": {
       "edgToEdgeEnabled": true,
@@ -15,6 +16,9 @@
     "ios": {
       "bundleIdentifier": "com.jhonatas.target",
       "icon": "./assets/ios-icon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
