--- a/app.json
+++ b/app.json
@@ -18,7 +18,8 @@
       "icon": "./assets/ios-icon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ]
   }
 }
